2017-02-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support brace expansion in globbing patterns.

	* include/glob.h (GLOB_BRACE): New manifest constant; define it...
	(__GLOB_FLAG__): ...in terms of this macro.

	* mingwex/glob.c (glob_match): Reindent, with preamble invoking...
	(glob_brace_expand): ...this new static inline function; implement it.
	(GLOB_INIT, GLOB_FREE): Redefine them, relating them to...
	(__GLOB_FLAG_OFFSET_HIGH_WATER_MARK): ...this.

	* setargv.c (__mingw32_setargv) [_CRT_glob]: Check if it includes...
	[GLOB_CASEMATCH | GLOB_BRACE]: either of these; remove check for...
	[__CRT_GLOB_CASE_SENSITIVE__]: ...this defunct option.

	* include/_mingw.h.in (GLOB_BRACE): Note its use in _CRT_glob.
	(GLOB_CASEMATCH): Likewise; this replaces all former usage of...
	(__CRT_GLOB_CASE_SENSITIVE__): ...this; delete definition.

2017-02-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Refactor <getopt.h> and <unistd.h> shared declarations.

	* include/getopt.h: Assert copyright.
	(_BEGIN_C_DECLS, _END_C_DECLS): Use as appropriate.
	(__GETOPT_H__, __GETOPT_LONG_H__): Delete them; replace them with...
	(_GETOPT_H): This new macro; it guards the entire file, except when...
	[__UNISTD_H_SOURCED__]: ...do not activate it; hence when...
	[!_GETOPT_H]: ...do not expose API declarations for...
	(getopt_long, getopt_long_only): ...these functions.
	[_GETOPT_H && _UNISTD_H]: Skip second pass API declarations for...
	(getopt): ...this function.

	* include/unistd.h: Use the #include "..." form when including...
	(io.h, process.h, getopt.h): ...these, to ensure correct association.
	(ftruncate): Map it directly to MSVCRT.DLL's _chsize() entry point.

2017-02-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid unnecessary duplication of configuration files.

	* Makefile.in (vpath install-sh): Define it; it matches...
	(vpath %.m4): ...this; add $top_srcdir/..; search it first; delete